<resources>
    <string name="app_name">MetroTrivia </string>
    <string name="greeting_word">Hello Metropolian!\u0020  </string>
    <string name="opening_word">Are you ready to test your brain?\u0020 </string>
    <string name="start_button">Start\u0020 </string>
    <string name="profile_page_button">Your accomplishments\u0020 </string>
    <string name="question_text_view">This is where we load a question. The question might be
        long so Imma write some BS to fill the space</string>
    <string name="answer_1">Answer 1 is written here</string>
    <string name="answer_3">This is the third answer</string>
    <string name="answer_2">May I present answer 2</string>
    <string name="answer_4">Ok I swear answer 4 is the last one</string>
    <string name="skip_or_next_button">Skip or next\u0020 </string>
</resources>